# Compiladores

./: .gitignore  README.MD
src/compilers_lab/driver/: README.md
src/compilers_lab/driver/examples/: parse_table.csv
src/compilers_lab/driver/src/: main.c
src/compilers_lab/first_follow_lab/src/: analyzer.c
src/compilers_lab/first_follow_lab/tests/: test_compute_first_tables.c  test_find_terminal_id.c
src/compilers_lab/lexer/src/: scanner.c  scanner.l
src/compilers_lab/regex_to_nfa/: CMakeLists.txt
src/compilers_lab/regex_to_nfa/include/: nfa.h  shunting_yard.h  simulate.h
src/compilers_lab/regex_to_nfa/src/: main.c  nfa.c  shunting_yard.c  shunting_yard.h  simulate.c  test  test_nfa.c  tests  tests-nfa
src/compilers_lab/regex_to_nfa/tests/: test_shunting_yard.c  test_simulate.c
src/compilers_lab/semantic/: Dockerfile  README.md  scanner.l
src/compilers_lab/semantic/examples/invalid/: error_llave.carta  error_programa.carta  error_sintaxis.carta
src/compilers_lab/semantic/examples/valid/: condicional.carta  funcion.carta  hola.carta  mientras.carta  variables.carta
src/compilers_lab/semantic/src/: AST.cpp  AST.h  CMakeLists.txt  Makefile  ast.cpp  ast.h  carta  main.cpp  parser.y  scanner.c  scanner.h  scanner.l
src/compilers_lab/semantic/tests/: test_AST.cpp  test_ast  test_ast.cpp
